Added copy command classes